ImageEncoder overrides PytorchHubMixin

--- a/image_encoder/train_model.ipynb
+++ b/image_encoder/train_model.ipynb
@@ -6,7 +6,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import copy\n",
     "from datasets import load_dataset, concatenate_datasets\n",
     "import random\n",
     "import json\n",
@@ -17,11 +16,12 @@
     "import torch\n",
     "import torch.nn as nn\n",
     "import torch.nn.functional as F\n",
-    "from torch.cuda.amp import autocast, GradScaler\n",
+    "from torch.amp import autocast, GradScaler\n",
     "from torch.utils.data import Dataset, DataLoader\n",
     "import torchvision.transforms as v2\n",
     "from torchvision.transforms.functional import to_pil_image\n",
-    "from transformers import AutoImageProcessor, SwinModel, SwinConfig"
+    "from transformers import AutoImageProcessor, SwinModel, SwinConfig\n",
+    "from huggingface_hub import PyTorchModelHubMixin"
    ]
   },
   {
@@ -167,17 +167,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class ImageEncoder(nn.Module):\n",
+    "class ImageEncoder(nn.Module, PyTorchModelHubMixin):\n",
     "    def __init__(self):\n",
     "        super(ImageEncoder, self).__init__()\n",
-    "        self.swin = SwinModel.from_pretrained(ckpt)\n",
+    "        self.swin = SwinModel(config=config)\n",
     "        self.embedding_layer = nn.Linear(config.hidden_size, 128)\n",
     "\n",
     "    def forward(self, image_tensor):\n",
     "        features = self.swin(image_tensor).pooler_output\n",
     "        embeddings = self.embedding_layer(features)\n",
     "        embeddings = F.normalize(embeddings, p=2, dim=1)\n",
-    "        \n",
+    "\n",
     "        return embeddings\n",
     "\n",
     "    \n",
@@ -218,7 +218,7 @@
     "        \n",
     "        anchor, positive = batch\n",
     "        \n",
-    "        with autocast():\n",
+    "        with autocast(device.type):\n",
     "            anchor_emb = model(anchor.to(device))\n",
     "            positive_emb = model(positive.to(device))\n",
     "            loss = criterion(anchor_emb, positive_emb)\n",
@@ -283,10 +283,9 @@
     "    print(f'Epoch: {epoch}, Train loss: {train_loss:.4f}, Eval loss: {val_loss:.4f}')\n",
     "\n",
     "    if val_loss < min_loss:\n",
-    "        torch.save(\n",
-    "            copy.deepcopy(model).to(torch.device(\"cpu\")).state_dict(),\n",
-    "            f\"{model_save_dir}/image_encoder.pt\",\n",
-    "        )\n",
+    "        model.save_pretrained(model_save_dir)\n",
+    "        config.save_pretrained(model_save_dir)\n",
+    "        image_processor.save_pretrained(model_save_dir)\n",
     "        with open(f'{model_save_dir}/training_state.json', 'w') as f:\n",
     "            f.write(json.dumps({'epoch': epoch, 'eval_loss': val_loss}))\n",
     "        min_loss = val_loss\n",
