탐지 카테고리 확장

--- a/object_detection/convert_fashionpedia_to_huggingface_dataset.ipynb
+++ b/object_detection/convert_fashionpedia_to_huggingface_dataset.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,29 +79,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['bag', 'bottom', 'dress', 'hat', 'outer', 'shoes', 'top']\n",
-      "{0: 'bag', 1: 'bottom', 2: 'dress', 3: 'hat', 4: 'outer', 5: 'shoes', 6: 'top'}\n",
-      "{'bag': 0, 'bottom': 1, 'dress': 2, 'hat': 3, 'outer': 4, 'shoes': 5, 'top': 6}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "category_norm_dict = {\n",
     "    'skirt': 'bottom',\n",
     "    'top, t-shirt, sweatshirt': 'top',\n",
+    "    'sweater': 'top',\n",
     "    'cape': 'outer',\n",
     "    'pants': 'bottom',\n",
     "    'shoe': 'shoes',\n",
     "    'coat': 'outer',\n",
     "    'shirt, blouse': 'top',\n",
     "    'dress': 'dress',\n",
+    "    'jumpsuit': 'jumpsuit',\n",
     "    'cardigan': 'outer',\n",
     "    'bag, wallet': 'bag',\n",
     "    'hat': 'hat',\n",
@@ -109,17 +101,27 @@
     "    'tights, stockings': 'bottom',\n",
     "    'vest': 'outer',\n",
     "    'shorts': 'bottom',\n",
-    "}\n",
-    "\n",
-    "norm_categories = list(sorted(set(category_norm_dict.values())))\n",
-    "print(norm_categories)\n",
+    "    'glove': 'glove',\n",
+    "    'watch': 'watch',\n",
+    "    'belt': 'belt',\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# labels = ['bag', 'bottom', 'dress', 'hat', 'outer', 'shoes', 'top']\n",
+    "labels = ['bag', 'belt', 'bottom', 'dress', 'eyewear', 'glove', 'hat', 'jumpsuit', 'outer', 'shoes', 'top', 'watch']\n",
     "\n",
     "id2label = {\n",
-    "    i: c for (i, c) in enumerate(norm_categories)\n",
+    "    i: c for (i, c) in enumerate(labels)\n",
     "}\n",
     "\n",
     "label2id = {\n",
-    "    c: i for (i, c) in enumerate(norm_categories)\n",
+    "    c: i for (i, c) in enumerate(labels)\n",
     "}\n",
     "\n",
     "print(id2label)\n",
@@ -128,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +205,7 @@
     "            data['objects'] = objects\n",
     "            data_list.append(data)\n",
     "\n",
-    "    class_label = ClassLabel(names=norm_categories)\n",
+    "    class_label = ClassLabel(names=labels)\n",
     "    features = Features({\n",
     "        'image_id': Value('int64'),\n",
     "        'width': Value('int64'),\n",
@@ -231,46 +233,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 1158/1158 [00:04<00:00, 251.77it/s]\n",
-      "100%|██████████| 3/3 [00:03<00:00,  1.19s/it]\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7efb69a9c859400dad225adc755fb181",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Saving the dataset (0/7 shards):   0%|          | 0/44932 [00:00<?, ? examples/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "dc9d8616f85c453ea921b93d903f45e4",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Saving the dataset (0/1 shards):   0%|          | 0/1155 [00:00<?, ? examples/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "split_train = create_dataset_split('train')\n",
     "split_test = create_dataset_split('test')\n",
@@ -278,57 +243,22 @@
     "dataset = DatasetDict({\n",
     "    'train': split_train,\n",
     "    'test': split_test, \n",
-    "})\n",
-    "\n",
-    "save_dir = f'./fashionpedia_hf_dataset'\n",
-    "if not os.path.isdir(save_dir):\n",
-    "    os.makedirs(save_dir)\n",
-    "\n",
-    "dataset.save_to_disk(save_dir)"
+    "})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset = load_from_disk('./fashionpedia_hf_dataset', keep_in_memory=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "DatasetDict({\n",
-       "    train: Dataset({\n",
-       "        features: ['image_id', 'width', 'height', 'image', 'objects'],\n",
-       "        num_rows: 44932\n",
-       "    })\n",
-       "    test: Dataset({\n",
-       "        features: ['image_id', 'width', 'height', 'image', 'objects'],\n",
-       "        num_rows: 1155\n",
-       "    })\n",
-       "})"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dataset"
+    "dataset.save_to_disk(f'./fashionpedia_hf_dataset')"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "fashion_image_retrieval",
+   "display_name": "fashion-visual-search",
    "language": "python",
    "name": "python3"
   },
@@ -342,7 +272,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
