--- a/object_detection/merge_dataset.ipynb
+++ b/object_detection/merge_dataset.ipynb
@@ -2,38 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "db388ed465194dd2b88e64a21300d736",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Saving the dataset (0/10 shards):   0%|          | 0/84431 [00:00<?, ? examples/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "53002e9cf8874c9080709c7a88f5fe38",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Saving the dataset (0/1 shards):   0%|          | 0/5544 [00:00<?, ? examples/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from datasets import load_from_disk, concatenate_datasets, DatasetDict, load_from_disk\n",
     "\n",
@@ -53,32 +24,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "DatasetDict({\n",
-       "    train: Dataset({\n",
-       "        features: ['image_id', 'width', 'height', 'image', 'objects'],\n",
-       "        num_rows: 84431\n",
-       "    })\n",
-       "    test: Dataset({\n",
-       "        features: ['image_id', 'width', 'height', 'image', 'objects'],\n",
-       "        num_rows: 5544\n",
-       "    })\n",
-       "})"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "dataset = load_from_disk('./object_detection_dataset')\n",
-    "dataset"
+    "print(dataset)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset.push_to_hub(repo_id='yainage90/fashion-object-detection-v2', private=True)"
    ]
   },
   {
@@ -91,7 +50,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "fashion_image_retrieval",
+   "display_name": "fashion-visual-search",
    "language": "python",
    "name": "python3"
   },
@@ -105,7 +64,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
