Trainer argument changed from tokenizer to processing_class

--- a/object_detection/train_model.ipynb
+++ b/object_detection/train_model.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from datasets import load_from_disk\n",
+    "from datasets import load_from_disk, load_dataset\n",
     "import random\n",
     "from PIL import Image, ImageDraw, ImageFont\n",
     "import numpy as np\n",
@@ -19,7 +19,7 @@
     "from functools import partial\n",
     "\n",
     "import albumentations as A\n",
-    "from transformers import AutoImageProcessor, ConditionalDetrForObjectDetection, TrainingArguments, Trainer\n",
+    "from transformers import AutoImageProcessor, AutoModelForObjectDetection, TrainingArguments, Trainer\n",
     "from transformers.image_transforms import center_to_corners_format"
    ]
   },
@@ -29,7 +29,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "device = torch.device('cuda') if torch.cuda.is_available() else 'cpu'\n",
+    "device = torch.device('cuda') if torch.cuda.is_available() else torch.device('cpu')\n",
     "print(device)"
    ]
   },
@@ -40,7 +40,7 @@
    "outputs": [],
    "source": [
     "dataset = load_from_disk('./dataset')\n",
-    "dataset"
+    "print(dataset)"
    ]
   },
   {
@@ -97,7 +97,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ckpt = \"microsoft/conditional-detr-resnet-50\""
+    "ckpt = \"microsoft/conditional-detr-resnet-50\"\n",
+    "# ckpt = \"hustvl/yolos-tiny\""
    ]
   },
   {
@@ -308,7 +309,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = ConditionalDetrForObjectDetection.from_pretrained(\n",
+    "model = AutoModelForObjectDetection.from_pretrained(\n",
     "    ckpt,\n",
     "    id2label=id2label,\n",
     "    label2id=label2id,\n",
@@ -355,18 +356,25 @@
     "    args=training_arguments,\n",
     "    train_dataset=dataset['train'],\n",
     "    eval_dataset=dataset['test'],\n",
-    "    tokenizer=image_processor,\n",
+    "    processing_class=image_processor,\n",
     "    data_collator=collate_fn,\n",
     "    compute_metrics=eval_compute_metrics_fn,\n",
     ")\n",
     "\n",
     "trainer.train(resume_from_checkpoint=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "fashion_image_retrieval",
+   "display_name": "fashion-visual-search",
    "language": "python",
    "name": "python3"
   },
@@ -380,7 +388,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
